--- a/3.ipynb
+++ b/3.ipynb
@@ -9,17 +9,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the side of triangle: 6\n",
-      "Enter the height of triangle: 5\n",
-      "Area of a right angled triangle of side 6 and height 5 is: 15\n"
+      "Enter your Name: Aswin\n",
+      "Hello Aswin!\n"
      ]
     }
    ],
    "source": [
-    "#area of right anled triangle\n",
-    "a=int(input(\"Enter the side of triangle: \"))\n",
-    "b=int(input(\"Enter the height of triangle: \"))\n",
-    "print(\"Area of a right angled triangle of side %d and height %d is: %d\"%(a,b,(a*b)/2))"
+    "#display name\n",
+    "a=input('Enter your Name: ')\n",
+    "print('Hello %s!' %(a))"
    ]
   },
   {
