--- a/5.ipynb
+++ b/5.ipynb
@@ -9,17 +9,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the side of triangle: 6\n",
-      "Enter the height of triangle: 5\n",
-      "Area of a right angled triangle of side 6 and height 5 is: 15\n"
+      "Enter the Initial amount: 10000\n",
+      "Enter the Number of Years: 6\n",
+      "Enter the Rate of Interest: 9\n",
+      "Simple interest is: 5400\n",
+      "Total amount after 6 year(s) is: 15400\n"
      ]
     }
    ],
    "source": [
-    "#area of right anled triangle\n",
-    "a=int(input(\"Enter the side of triangle: \"))\n",
-    "b=int(input(\"Enter the height of triangle: \"))\n",
-    "print(\"Area of a right angled triangle of side %d and height %d is: %d\"%(a,b,(a*b)/2))"
+    "#simple interest\n",
+    "i=int(input('Enter the Initial amount: '))\n",
+    "n=int(input('Enter the Number of Years: '))\n",
+    "r=int(input('Enter the Rate of Interest: '))\n",
+    "print('Simple interest is: %d' %((i*n*r)/100))\n",
+    "print('Total amount after %d year(s) is: %d'%(n,i+(i*n*r)/100))"
    ]
   },
   {
