--- a/areaofcircle.ipynb
+++ b/areaofcircle.ipynb
@@ -2,21 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter radius: 67\n",
-      "Area of circle with 67 radius is: 14095\n"
+      "Enter radius: 45\n",
+      "Area of circle with 45 radius is: 6361\n"
      ]
     }
    ],
    "source": [
+    "import math\n",
     "r=float(input('Enter radius: '))\n",
-    "print('Area of circle with %d radius is: %d' %(r,3.14*r*r))"
+    "print('Area of circle with %d radius is: %d' %(r,math.pi*r*r))"
    ]
   },
   {
