--- a/areaofcircle.ipynb
+++ b/areaofcircle.ipynb
@@ -2,22 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter radius: 45\n",
-      "Area of circle with 45 radius is: 6361\n"
+      "Enter radius: 5\n",
+      "Area of circle with 5.000000 radius is: 78.539816\n"
      ]
     }
    ],
    "source": [
     "import math\n",
     "r=float(input('Enter radius: '))\n",
-    "print('Area of circle with %d radius is: %d' %(r,math.pi*r*r))"
+    "print('Area of circle with %f radius is: %f' %(r,math.pi*r*r))"
    ]
   },
   {
