--- a/ctof.ipynb
+++ b/ctof.ipynb
@@ -2,22 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter a value: 45\n",
-      "45C is 113F\n"
+      "Enter a value: 654\n",
+      "654.000000C is 1209.200000F\n"
      ]
     }
    ],
    "source": [
     "c=float(input('Enter a value: '))\n",
     "f=(c*(9/5))+32\n",
-    "print('%dC is %dF' %(c,f))"
+    "print('%fC is %fF' %(c,f))"
    ]
   },
   {
