--- a/kmtomi.ipynb
+++ b/kmtomi.ipynb
@@ -2,21 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter value in KM250\n",
-      "250 KM is 155 mi\n"
+      "Enter value in KM565\n",
+      "565.000000 KM is 351.074050 mi\n"
      ]
     }
    ],
    "source": [
     "k=float(input('Enter value in KM'))\n",
-    "print('%d KM is %d mi' %(k,k*0.62137))"
+    "print('%f KM is %f mi' %(k,k*0.62137))"
    ]
   },
   {
