--- a/ctof.ipynb
+++ b/ctof.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "c=float(input('Enter a value: '))\n",
     "f=(c*(9/5))+32\n",
-    "print('%fC is %fF' %(c,f))"
+    "print('%.2fC is %.2fF' %(c,f))"
    ]
   },
   {
