--- a/kmtomi.ipynb
+++ b/kmtomi.ipynb
@@ -16,7 +16,7 @@
    ],
    "source": [
     "k=float(input('Enter value in KM'))\n",
-    "print('%f KM is %f mi' %(k,k*0.62137))"
+    "print('%.2f KM is %.2f mi' %(k,k*0.62137))"
    ]
   },
   {
