--- a/areaofcircle.ipynb
+++ b/areaofcircle.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "import math\n",
     "r=float(input('Enter radius: '))\n",
-    "print('Area of circle with %f radius is: %f' %(r,math.pi*r*r))"
+    "print('Area of circle with %.2f radius is: %.2f' %(r,math.pi*r*r))"
    ]
   },
   {
