--- a/#66.lambda _function.ipynb
+++ b/#66.lambda _function.ipynb
@@ -22,7 +22,7 @@
     "        print(\"Area of Rectangle: \",rect(l,b))\n",
     "    elif (ch==3):\n",
     "        b = int(input(\"Enter breadth: \"))\n",
-    "        l = int(input(\"Enter height: \"))\n",
+    "        h = int(input(\"Enter height: \"))\n",
     "        print(\"Area of Triangle: \",tri(b,h))\n",
     "    else:\n",
     "        print('Exiting...')\n",
